# BMSTU_CG_course

./: .gitignore  README.md
models_blender/: pawn.blend
preaparation/: preza.odp  speach.odt
report/: 01-abbreviations.tex  02-introduction.tex  03-analysis.tex  04-design.tex  05-implementation.tex  06-research.tex  07-conclusion.tex  08-appendix.tex  biblio.bib  preamble.tex  report.tex
report/generate_table/: gen.py
report/inc/img/: addmodel.drawio  addtokd.graphml  allinitprocess.drawio  classes.drawio  command.drawio  createkd.graphml  deletefromkd.graphml  formal.drawio  move.drawio  raytraice.graphml  removemodel.drawio  search.graphml  spector.drawio
src/: CMakeLists.txt  image.hpp  main.cpp  main_release.cpp  main_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/builder/: basebuilder.cpp  basebuilder.h
src/builder/bishop/: bishop.cpp  bishop.h
src/builder/chessdesk/: chessdesk.cpp  chessdesk.h
src/builder/king/: king.cpp  king.h
src/builder/knight/: knight.cpp  knight.h
src/builder/pawn/: pawn.cpp  pawn.h
src/builder/queen/: queen.cpp  queen.h
src/builder/rook/: rook.cpp  rook.h
src/command/: basecommand.h
src/command/cameracommand/: cameracommand.cpp  cameracommand.h
src/command/scenecommand/: scenecommand.cpp  scenecommand.h
src/director/: basedirector.h
src/director/chessdeskdirector/: chessdeskdirector.h
src/drawer/: basedrawer.h  qtdrawer.cpp  qtdrawer.h
src/facade/: facade.cpp  facade.h
src/factory/: abstractfactory.h
src/factory/qtdrawerfactory/: qtdrawerfactory.cpp  qtdrawerfactory.h
src/loaddialog/: loaddialog.cpp  loaddialog.h
src/managers/: managersholder.h
src/managers/drawmanager/: drawmanager.cpp  drawmanager.h
src/managers/scenemanager/: scenemanager.cpp  scenemanager.h
src/managers/transformmanager/: transformmanager.h
src/models/: bishop.stl  king.stl  knight.stl  pawn.stl  pawn1_old.stl  pawn_old.stl  queen.stl  rook.stl
src/object/: object.h
src/object/invisibleobject/: invisibleobject.h
src/object/invisibleobject/camera/: camera.cpp  camera.h
src/object/invisibleobject/kdtree/: kdtree.cpp  kdtree.h
src/object/invisibleobject/lightsource/: lightsource.cpp  lightsource.h
src/object/visibleobject/: visibleobject.h
src/object/visibleobject/box/: box.cpp  box.h
src/object/visibleobject/model/: model.cpp  model.h
src/object/visibleobject/sphere/: sphere.cpp  sphere.h
src/object/visibleobject/triangle/: triangle.cpp  triangle.h
src/scene/: exceptionscene.h  scene.cpp  scene.h
src/scenemanager/: scenemanager.cpp  scenemanager.h
src/utils/baseexception/: baseexception.h
src/utils/boundingbox/: boundingbox.cpp  boundingbox.h
src/utils/material/: material.cpp  material.h
src/utils/ray/: ray.cpp  ray.h
src/utils/vector3d/: vector3d.cpp  vector3d.h
src/visitor/: basevisitor.h
src/visitor/drawvisitor/: drawvisitor.cpp  drawvisitor.h
